assets/css/progress.css
.skillbar {
	position:relative;
	display:block;
	margin-bottom:15px;
	width:100%;
	background:#eee;
	height:28px;
	border-radius:3px;
	-moz-border-radius:3px;
	-webkit-border-radius:3px;
	-webkit-transition:0.4s linear;
	-moz-transition:0.4s linear;
	-ms-transition:0.4s linear;
	-o-transition:0.4s linear;
	transition:0.4s linear;
	-webkit-transition-property:width, background-color;
	-moz-transition-property:width, background-color;
	-ms-transition-property:width, background-color;
	-o-transition-property:width, background-color;
  transition-property:width, background-color;
	font-family: 'PT Sans', sans-serif;  
	box-shadow: -4px 8px 16px 0 rgba(0, 0, 0, 0.24);
}

.skillbar-title {
	position:absolute;
	top:0;
	left:0;
  width:120px;
	font-weight:bold;
	font-size:13px;
	color:#ffffff;
	background:#6adcfa;
	-webkit-border-top-left-radius:3px;
	-webkit-border-bottom-left-radius:4px;
	-moz-border-radius-topleft:3px;
	-moz-border-radius-bottomleft:3px;
	border-top-left-radius:3px;
  border-bottom-left-radius:3px;
  font-size: 1.1rem;
  z-index: 10;
}

.skillbar-title span {
	display:block;
	background:rgba(0, 0, 0, 0.1);
	padding:0 20px;
	height:28px;
	line-height:28px;
	-webkit-border-top-left-radius:3px;
	-webkit-border-bottom-left-radius:3px;
	-moz-border-radius-topleft:3px;
	-moz-border-radius-bottomleft:3px;
	border-top-left-radius:3px;
	border-bottom-left-radius:3px;
	position: relative;
	z-index: 11;
}

.skillbar-bar {
	height:28px;
	width:0px;
	background:#6adcfa;
	border-radius:3px;
	-moz-border-radius:3px;
	-webkit-border-radius:3px;
	position: relative;
}

.skill-bar-percent {
	position:absolute;
	right:10px;
	top:0;
	font-size: 1rem;
	height:28px;
	line-height:28px;
	color:#ffffff;
	font-weight: bold;
	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
}

